--- a/style.css
+++ b/style.css
@@ -496,7 +496,7 @@ p {
   left: 0;
   right: 0;
   bottom: 0;
-  background-color:gba(0, 123, 255, 0.9);
+  background-color:(0, 123, 255, 0.9);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -930,3 +930,4 @@ p {
 
   
 }
+
